<resources>
    <string name="app_name">NMKRD</string>
    <string name="dict_name_kr">KR-KR</string>
    <string name="dict_name_jp">KR&lt;-&gt;JP</string>
    <string name="dict_name_en">KR&lt;-&gt;EN</string>
    <string name="dict_name_hj">Hanja</string>

    <string name="subdict_words">Words</string>
    <string name="subdict_ex">Examples</string>
    <string name="subdict_hanja">Hanja</string>

    <string name="label_search_hint">Search...</string>
    <string name="label_search_more">Load more</string>
    <string name="label_no_results_found">No results found</string>

    <string name="label_details_def_ex">Definition and Examples</string>

    <string name="label_strokes">Strokes: </string>
    <string name="label_radical">Radical: </string>
    <string name="label_readings">Readings: </string>
    <string name="label_saseongeum">Saseongeum: </string>
    <string name="label_jp_kanji_onyomi">Onyomi: </string>
    <string name="label_jp_kanji_kunyomi">Kunyomi: </string>
    <string name="label_jp_kanji_meaning">Meaning: </string>

    <string name="label_kunyomi_ex">Kunyomi examples</string>
    <string name="label_onyomi_ex">Onyomi examples</string>

    <string name="label_hj_relhj_diffForm">Different forms: </string>
    <string name="label_hj_relhj_relShape">Related shape: </string>
    <string name="label_hj_relhj_relMean">Related meaning: </string>
    <string name="label_hj_relhj_oppMean">Opposite meaning: </string>

    <string name="label_heading_history">History</string>

    <string name="label_menu_home">Home</string>
    <string name="label_menu_history">History</string>
    <string name="label_menu_sentence_store">Sentence Store</string>
    <string name="label_menu_clear_sentence_store">Clear sentence store</string>
    <string name="label_menu_clear_history">Clear history</string>
    <string name="label_menu_about">About app</string>

    <string name="label_menu_save">Save</string>
    <string name="label_menu_sentence_copy_original">Copy sentence</string>
    <string name="label_menu_sentence_copy_translation">Copy translation</string>
    <string name="label_menu_delete">Delete</string>
    <string name="label_menu_copy_hanja">Copy hanja</string>
    <string name="label_menu_copy_hangeul">Copy hangeul</string>

    <string name="toast_deleted">Deleted</string>
    <string name="toast_copied">Copied</string>
    <string name="toast_saved">Saved</string>
    <string name="toast_backpress_exit">Press twice to exit</string>
    <string name="toast_cleared_history">History cleared</string>
    <string name="toast_cleared_sentence_store">Cleared sentence store</string>

    <string name="dialog_clear_sentance_message">All of your saved sentences will be deleted!</string>
    <string name="dialog_changelog_title">Changelog</string>

    <string name="square_brackets">[%s]</string>

    <string name="err_no_internet">You are not connected to the internet</string>

</resources>
